--- a/homepage.css
+++ b/homepage.css
@@ -11,6 +11,7 @@ body{
     height: 100%;
     outline: black solid 2px;
     margin: 0px;
+    z-index: 0;
 }
 
 #title{
@@ -27,6 +28,7 @@ body{
     line-height: 61px;
     letter-spacing: 0em;
     text-align: center;
+    z-index: 0;
 }
 
 #picture_container{
@@ -93,6 +95,13 @@ body{
     line-height: 61px;
     letter-spacing: 0em;
     text-align: center;
+    
+}
+
+#look_up_link, #import_link{
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
 
 }
 
@@ -122,3 +131,4 @@ body{
     font-size: 50px;
 
 }
+
