--- a/import.css
+++ b/import.css
@@ -14,3 +14,11 @@ body{
     margin: 0px;
     z-index: 0;
 }
+
+#temp{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    font-size: 15px;
+    color:azure;
+}
