--- a/info.css
+++ b/info.css
@@ -77,8 +77,87 @@ body{
     border: red solid 2px;
     border-radius: 10px;
     position: absolute;
-    left: 37.5%;
-    top: 150px;
+    left: 700px;
+    top: 0px;
     background-color: whitesmoke;
 
+}
+
+.choices{
+    width: 100%;
+    height: 100%;
+    font-family: Helvetica;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 75px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.dropbtn {
+    width: 100%;
+    height: 125px;
+    background-color: #DFE6E9;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-radius: 15px;
+    border: 5px solid #636E72;
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    font-family: Helvetica;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 75px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+/* Style the dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Style the links inside the dropdown */
+.dropdown-content a {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+#startDate, #endDate{
+
+    position: relative;
+    top: 50px;
+    left: -150px;
+}
+
+#startDateLabel, #endDateLabel{
+    position: relative;
+    top: 25px;
+    left: -50px;
+}
+
+#dateLabel{
+    position: relative;
+    left: 30%;
+}
+
+#submitDates{
+
+    position: relative;
+    left: 150px;
 }
