Created new classes, queries, and plots.

--- a/templates/info.html
+++ b/templates/info.html
@@ -42,7 +42,9 @@
                         <div class="choices" id="foodUS"><a href="#">Food-US</a></div>
                         <div class="choices" id="kto"><a href="#">KTO</a></div>
                         <div class="choices" id="pTanks"><a href="#">Pretreat Tanks</a></div>
-
+                        <div class="choices" id="rswater"><a href="#">RS-Water</a></div>
+                        <div class="choices" id="uswater"><a href="#">US-Water</a></div>
+                        <div class="choices" id="gases"><a href="#">Gases</a></div>
                     </div>
                 </div>
             </div>
