--- a/templates/info.html
+++ b/templates/info.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Import Files</title>
-    <link rel="stylesheet" href="./static/info.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='info.css') }}">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 
