--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>International Space Station Inventory Management System</title>
-    <link rel="stylesheet" href="static/homepage.css"></link>
+    <link rel="stylesheet" href="{{ url_for('static', filename='homepage.css') }}">
 </head>
 <body>
     <div id="container_whole">
