consumption calculations, fixed gases graph

--- a/templates/info.html
+++ b/templates/info.html
@@ -18,7 +18,7 @@
 
         
                 <div id="info_screen">
-                <div id="top" class="info_squares">No Warnings<br>Supplies Normal</div>
+                <div id="top" class="info_squares">Consumpation Rates<br>And Percent Difference</div>
                 <div id="mid" class="info_squares">
 
                     <label id="dateLabel">Dates</label>
