--- a/static/info.css
+++ b/static/info.css
@@ -71,6 +71,25 @@ body{
 
 }
 
+.info_consumption{
+    width: 100%;
+    height: 125px;
+    background-color: #DFE6E9;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-radius: 15px;
+    border: 5px solid #636E72;
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    font-family: Helvetica;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
+
+}
+
 #graph_box{
     width: 900px;
     height: 700px;
