Front End Polishing

--- a/templates/info.html
+++ b/templates/info.html
@@ -15,10 +15,12 @@
             <a id="look_up_link" href="./index.html"><button id="menu_button" class="button_press" type="submit">Menu</button></a>
             <a id="look_up_link" href="./index.html"><button id="reset_button" class="button_press" type="submit">Reset</button></a>
         </div>
-
-        
                 <div id="info_screen">
-                <div id="top" class="info_consumption">Consumpation Rates<br>And Percent Difference</div>
+                <div id="info_buttons">
+                    <button id="consumption" class="info_button_press" type="submit">Consumpation Rates</button>
+                    <button id="percent_diff" class="info_button_press" type="submit">Percent Difference</button>
+                </div>
+                  
                 <div id="mid" class="info_squares">
 
                     <label id="dateLabel">Dates</label>
@@ -32,7 +34,7 @@
                 </div>
 
                 <div class="dropdown">
-                    <button class="dropbtn" id="itemSelection">Choose the Item</button>
+                    <button class="dropbtn" id="itemSelection">Select Item</button>
 
                     <div class="dropdown-content">
                         <div class="choices" id="acyInserts"><a href="#">ACY Inserts</a></div>
