--- a/static/info.css
+++ b/static/info.css
@@ -6,7 +6,7 @@ body{
 }
 
 #container_whole{
-    background-color: #2D3436;
+    background-color: #1f1f1f;
     width: 100%;
     height: 100%;
     outline: black solid 2px;
@@ -26,7 +26,7 @@ body{
 .button_press{
     width: 170px;
     height: 60px;
-    margin: 15px;
+    margin: 18px;
     background: linear-gradient(0deg, #B2BEC3, #B2BEC3);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
     box-shadow: 0px 4px 4px 0px #00000040;
@@ -37,23 +37,22 @@ body{
     line-height: 34px;
     letter-spacing: 0em;
     text-align: center;
-
 }
 
 #info_screen{
-    width: 525px;
-    height: 500px;
-    border: white solid 2px;
+    width: 535px;
+    height: 510px;
+    background-color: grey;
+    border: grey 3px;
     border-radius: 10px;
     position: relative;
     left: 65px;
     display: block;
     padding: 20px;
-
 }
 
 .info_squares{
-    width: 100%;
+    width: 98.5%;
     height: 125px;
     background-color: #DFE6E9;
     margin-bottom: 15px;
@@ -68,38 +67,32 @@ body{
     line-height: 75px;
     letter-spacing: 0em;
     text-align: center;
-
 }
 
-.info_consumption{
-    width: 100%;
-    height: 125px;
-    background-color: #DFE6E9;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    border-radius: 15px;
-    border: 5px solid #636E72;
+.info_button_press{
+    width: 265px;
+    height: 60px;
+    margin: 0px;
+    background: linear-gradient(0deg, #B2BEC3, #B2BEC3);
     box-shadow: 0px 4px 4px 0px #00000040 inset;
     box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: 15px;
     font-family: Helvetica;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 400;
-    line-height: 50px;
+    line-height: 34px;
     letter-spacing: 0em;
     text-align: center;
-
 }
 
 #graph_box{
     width: 900px;
     height: 700px;
-    border: red solid 2px;
-    border-radius: 10px;
+    border: whitesmoke solid 2px;
     position: absolute;
     left: 700px;
     top: 0px;
     background-color: whitesmoke;
-
 }
 
 .choices{
@@ -124,7 +117,7 @@ body{
     box-shadow: 0px 4px 4px 0px #00000040 inset;
     box-shadow: 0px 4px 4px 0px #00000040;
     font-family: Helvetica;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 400;
     line-height: 75px;
     letter-spacing: 0em;
@@ -157,26 +150,38 @@ body{
     display: block;
 }
 
-#startDate, #endDate{
-
+#startDate{
     position: relative;
     top: 50px;
-    left: -150px;
+    left: -100px
+} 
+
+#endDate{
+    position: relative;
+    top: 50px;
+    left: -175px;
 }
 
-#startDateLabel, #endDateLabel{
+#startDateLabel{
     position: relative;
     top: 25px;
-    left: -50px;
+    left: 10px;
+} 
+
+#endDateLabel{
+    position: relative;
+    top: 25px;
+    left: -70px;
 }
 
 #dateLabel{
     position: relative;
-    left: 30%;
+    font-size: 24px;
+    left: 40%;
 }
 
 #submitDates{
-
     position: relative;
-    left: 150px;
+    top: 3.75px;
+    left: 140px;
 }
