--- a/static/info.css
+++ b/static/info.css
@@ -40,9 +40,10 @@ body{
 }
 
 #info_screen{
-    width: 525px;
-    height: 500px;
-    border: white solid 2px;
+    width: 535px;
+    height: 530px;
+    background-color: grey;
+    border: grey 3px;
     border-radius: 10px;
     position: relative;
     left: 65px;
@@ -68,9 +69,9 @@ body{
     text-align: center;
 }
 
-.info_consumption{
-    width: 100%;
-    height: 125px;
+.calculations{
+    width: 98.5%;
+    height: 125;
     background-color: #DFE6E9;
     margin-bottom: 15px;
     margin-top: 15px;
@@ -78,14 +79,28 @@ body{
     border: 5px solid #636E72;
     box-shadow: 0px 4px 4px 0px #00000040 inset;
     box-shadow: 0px 4px 4px 0px #00000040;
+    font-family: Helvetica;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 75px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.info_button_press{
+    width: 265px;
+    height: 60px;
+    margin: 0px;
+    background: linear-gradient(0deg, #B2BEC3, #B2BEC3);
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+    box-shadow: 0px 4px 4px 0px #00000040;
     border-radius: 15px;
     font-family: Helvetica;
     font-size: 25px;
     font-weight: 400;
-    line-height: 50px;
+    line-height: 34px;
     letter-spacing: 0em;
     text-align: center;
-
 }
 
 #graph_box{
