Put large JS functions in own file

--- a/templates/info.html
+++ b/templates/info.html
@@ -65,6 +65,7 @@
     </div>
 </body>
 
-<script src="static/info.js"></script>
+<script type="text/javascript" src="static/info.js"></script>
+<script type="text/javascript" src="static/requests.js"></script>
 
 </html>
