predictive model outputs to frontend graph.

--- a/templates/info.html
+++ b/templates/info.html
@@ -37,9 +37,9 @@
                     <button class="dropbtn" id="itemSelection">Select Item</button>
 
                     <div class="dropdown-content">
+                        <div class="choices" id="all"><a href="#">All</a></div>
                         <div class="choices" id="acyInserts"><a href="#">ACY Inserts</a></div>
                         <div class="choices" id="filterInserts"><a href="#">Filter Inserts</a></div>
-                        <div class="choices" id="food"><a href="#">Food</a></div>
                         <div class="choices" id="foodRS"><a href="#">Food-RS</a></div>
                         <div class="choices" id="foodUS"><a href="#">Food-US</a></div>
                         <div class="choices" id="kto"><a href="#">KTO</a></div>
