--- a/templates/info.html
+++ b/templates/info.html
@@ -5,16 +5,21 @@
     <title>Import Files</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='info.css') }}">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+
 
 
 </head>
 <body>
+    <img src="3sec.gif" id="a" style="display: none;">
     <div id="container_whole">
         <div id="navbar">
             <a id="look_up_link" href="./index.html"><button id="back_button" class="button_press" type="submit">Back</button></a>
             <a id="look_up_link" href="./index.html"><button id="menu_button" class="button_press" type="submit">Menu</button></a>
             <a id="look_up_link" href="./index.html"><button id="reset_button" class="button_press" type="submit">Reset</button></a>
         </div>
+        <div id="loading"></div>
+
                 <div id="info_screen">
                 <div id="info_buttons">
                     <button id="consumption" class="info_button_press" type="submit">Consumpation Rates</button>
@@ -51,10 +56,8 @@
                 </div>
 
                 <div class="calculations" id = "calc_data">
-                    
-
-                    
                 </div>
+
 
             </div>
 
