--- a/templates/info.html
+++ b/templates/info.html
@@ -16,9 +16,10 @@
         <div id="navbar">
             <a id="look_up_link" href="./index.html"><button id="back_button" class="button_press" type="submit">Back</button></a>
             <a id="look_up_link" href="./index.html"><button id="menu_button" class="button_press" type="submit">Menu</button></a>
-            <a id="look_up_link" href="./index.html"><button id="reset_button" class="button_press" type="submit">Reset</button></a>
+            <a id="look_up_link" href="./info.html"><button id="reset_button" class="button_press" type="submit">Reset</button></a>
         </div>
         <div id="loading"></div>
+        <div id="loadingtwo"></div>
 
                 <div id="info_screen">
                 <div id="info_buttons">
