--- a/templates/info.html
+++ b/templates/info.html
@@ -20,6 +20,7 @@
         </div>
         <div id="loading"></div>
         <div id="loadingtwo"></div>
+        <div id="loadingthree"></div>
 
                 <div id="info_screen">
                 <div id="info_buttons">
