--- a/static/info.css
+++ b/static/info.css
@@ -227,7 +227,7 @@ body{
     width: 20rem;
     height: 20rem;
     border: 30px solid #403e3e;
-    border-top: 30px solid #bfa7d5;
+    border-bottom: 30px solid #bfa7d5;
     border-radius: 100%;
     margin: auto;
     visibility: hidden;
@@ -235,7 +235,7 @@ body{
     position: fixed;
     top: 175px;
     left: 610px;
-    z-index: 1; 
+    z-index: 2; 
 }
 
 #loading.display {
@@ -260,4 +260,31 @@ body{
     to {
         transform: rotate(0deg);
     }
+}
+
+
+#loadingthree {
+    width: 340px;
+    height: 75px;
+    margin: 18px;
+    background: linear-gradient(0deg, #000000, #000000);
+    box-shadow: 0px 4px 4px 0px #00000040 inset;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    border-radius: 15px;
+    font-family: Helvetica;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 34px;
+    letter-spacing: 0em;
+    text-align: center;
+    visibility: hidden;
+    position: fixed;
+    top: 300px;
+    left: 610px;
+    z-index: 1;
+    color: white;
+}
+
+#loadingthree.displaythree {
+    visibility: visible;
 }
