--- a/templates/info.html
+++ b/templates/info.html
@@ -4,8 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Import Files</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='info.css') }}">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
 
 
@@ -72,5 +70,7 @@
 
 <script type="text/javascript" src="static/info.js"></script>
 <script type="text/javascript" src="static/requests.js"></script>
+<script type="text/javascript" src="static/plotly.js"></script>
+
 
 </html>
