--- a/templates/info.html
+++ b/templates/info.html
@@ -42,7 +42,7 @@
                     <button class="dropbtn" id="itemSelection">Select Item</button>
 
                     <div class="dropdown-content">
-                        <div class="choices" id="all"><a href="#">All</a></div>
+                        <div class="choices" id="all"><a href="#">Inventory</a></div>
                         <div class="choices" id="acyInserts"><a href="#">ACY Inserts</a></div>
                         <div class="choices" id="filterInserts"><a href="#">Filter Inserts</a></div>
                         <div class="choices" id="foodRS"><a href="#">Food-RS</a></div>
