Added resupply quantities and percent to threshold

--- a/templates/info.html
+++ b/templates/info.html
@@ -20,7 +20,7 @@
         <div id="loadingtwo"></div>
         <div id="loadingthree"></div>
 
-                <div id="info_screen">
+                <div id="info_screen" class = "info_screen">
                 <div id="info_buttons">
                     <button id="consumption" class="info_button_press" type="submit">Consumpation Rates</button>
                     <button id="percent_diff" class="info_button_press" type="submit">Make Predictions</button>
