--- a/static/info.css
+++ b/static/info.css
@@ -39,9 +39,22 @@ body{
     text-align: center;
 }
 
-#info_screen{
+.info_screen{
     width: 535px;
     height: 530px;
+    background-color: grey;
+    border: grey 3px;
+    border-radius: 10px;
+    position: relative;
+    left: 65px;
+    display: block;
+    padding: 20px;
+    overflow: visible;
+}
+
+.info_screenRESIZE{
+    width: 535px;
+    height: 840px;
     background-color: grey;
     border: grey 3px;
     border-radius: 10px;
@@ -69,6 +82,7 @@ body{
     letter-spacing: 0em;
     text-align: center;
 }
+
 
 .calculations{
     width: 98.5%;
@@ -150,6 +164,25 @@ body{
     line-height: 50px;
     letter-spacing: 0em;
     text-align: center;
+  }
+
+  .resupply {
+    width: 99%;
+    height: 300px;
+    overflow: auto;
+    background-color: #DFE6E9;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    border-radius: 15px;
+    border: 5px solid #636E72;
+    box-shadow: 0px 4px 4px 0px #00000040 inset, 0px 4px 4px 0px #00000040;
+    font-family: Helvetica;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 50px;
+    letter-spacing: 0em;
+    text-align: center;
+    display: block;
   }
   
 
